# phasefinder

./: .gitignore  README.md  phasefinder-0.1-noattn.pt  phasefinder-0.1.pt  pyproject.toml  requirements.txt  retest_models.py  test_fix.py  test_model.py
.github/workflows/: ci.yml
experiments/: attn.sh  attn2.sh  channels.sh  lr.sh  phase_width.sh  tcn_dilation.sh  tcn_layers.sh
phasefinder/: __init__.py  constants.py  dataset.py  detect_corruption.py  grid_search_results_20240731_175605.csv  grid_search_results_20240801_132617.csv  infer.py  postproc_gridsearch.py  predictor.py  test_model.py  test_postproc.py  train.py  val.py
phasefinder/audio/: log_filter.py
phasefinder/model/: __init__.py  attention.py  decoder.py  feature1d.py  model.py  model_attn.py  model_noattn.py  pos_encoding.py
phasefinder/postproc/: __init__.py  cleaner.py  hmm.py  lin_times.py  strength.py
phasefinder/utils/: __init__.py  detect_corruption.py  get_device.py  get_weights.py  one_hots.py  test_model.py
tests/: test_weight_loading.py
