[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phasefinder"
version = "0.0.2"
authors = [
  { name="bleugreen", email="bleugreendesign@gmail.com" },
]
description = "rotational beat estimation model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2.0.0",
    "torch",
    "pytorch-tcn",
    "h5py",
    "librosa",
    "nnAudio",
    "torchaudio",
    "soundfile",
    "deeprhythm",
    "tqdm",
    "mir_eval",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/bleugreen/phasefinder"
Issues = "https://github.com/bleugreen/phasefinder/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
